tests/ui/snapshots/modules_ok.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/modules_ok/main.wardscript
---
exit: Some(0)
--- human ---
ok: tests/ui/modules_ok/main.wardscript
--- json ---
{
  "diagnostics": [],
  "file": "tests/ui/modules_ok/main.wardscript"
}
