tests/ui/snapshots/names_unknown_value.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/names_unknown_value.wardscript
---
exit: Some(1)
--- human ---
[W0100] Error: cannot find `tiket` in this scope
   ╭─[ tests/ui/names_unknown_value.wardscript:2:5 ]
   │
 2 │     tiket
   │     ──┬──  
   │       ╰──── not found
   │ 
   │ Help: a similar name exists: `ticket`
───╯
error: could not check `tests/ui/names_unknown_value.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0100",
      "file": "tests/ui/names_unknown_value.wardscript",
      "help": "a similar name exists: `ticket`",
      "labels": [
        {
          "message": "not found",
          "primary": true,
          "span": {
            "end": {
              "column": 10,
              "line": 2,
              "offset": 42
            },
            "start": {
              "column": 5,
              "line": 2,
              "offset": 37
            }
          }
        }
      ],
      "message": "cannot find `tiket` in this scope",
      "severity": "error",
      "span": {
        "end": {
          "column": 10,
          "line": 2,
          "offset": 42
        },
        "start": {
          "column": 5,
          "line": 2,
          "offset": 37
        }
      }
    }
  ],
  "file": "tests/ui/names_unknown_value.wardscript"
}
